# fluidmcp

./: .coverage.codespaces-e473f7.pid127543.X44ZYEex.HO2HRWzo2aSh  .coverage.codespaces-e473f7.pid127804.XrxVaD9x.HO2HRWzo2aSh  .dockerignore  .env.example  .gitignore  AUTH0_CONFIG_FILE_GUIDE.md  AUTH0_IMPLEMENTATION_REVIEW.md  AUTH0_NEXT_STEPS.md  AUTH0_QUICK_START.md  AUTH_SUCCESS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODESPACES_AUTH0_SETUP.md  CODE_FLOW.md  CONTRIBUTING.md  DEMO_VLLM.md  Dockerfile  Dockerfile.pr352  Dockerfile.railway  GATEWAY_AUTH_IMPLEMENTATION.md  GITHUB_MCP_SERVERS.md  MANIFEST.in  ONBOARDING_TASKS.md  OTEL_MIGRATION_SUMMARY.md  PACKAGE_OAUTH.md  PR394_IMPROVEMENTS_SUMMARY.md  PR3_TESTING.md  QUICKSTART.md  QUICK_START.md  RAILWAY_PR352_DEPLOYMENT.md  README-VLLM.md  README.md  REFACTOR_COMPLETE.md  Readme.md  SANDBOX_COMPLETE_PLAN.md  SANDBOX_IMPLEMENTATION_PLAN.md  SANDBOX_MCP_PLAN.md  SECURITY_FIXES_SUMMARY.md  START_AUTH0.md  TEST_RESULTS.md  (+44 more)
image-verification-mcp/: .gitignore  ARCHITECTURE_REFACTOR.md  CUSTOMER_DEMO.md  DEPLOYMENT.md  IMPROVEMENTS_SUMMARY.md  PDF_HANDLING_UPDATE.md  QUICKSTART.md  README.md  SCORING_IMPROVEMENTS.md  STRICT_MODE_PHOTOS.md  TESTING_GUIDE.md  api_server.py  metadata.json  pyproject.toml  quick_test.sh  requirements.txt  server.py  test_api.py  test_demo.py  test_real_image.py
image-verification-mcp/detectors/: __init__.py  ai_detector.py  document_rules.py  metadata_detector.py  ocr_detector.py  pipeline.py
ui-mcps/weather-mcp-html/: AGENT-INTEGRATION.md  CODESPACES-SETUP.md  README.md  frontend-weather.html  (+6 more)
(+534 files in other folders)
