[project]
name = "image-verification-mcp"
version = "1.0.0"
description = "MCP server for detecting AI-generated, tampered, and fake document images"
authors = [{name = "FluidMCP Team"}]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastmcp>=0.2.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "pypdf2>=3.0.0",
    "piexif>=1.1.3",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
image-verification-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detectors"]
include = ["server.py", "metadata.json"]
